force-app/main/default/objects/Case/fields/Classification_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Classification_Confidence__c</fullName>
    <label>Classification Confidence</label>
    <description>AI confidence score for case classification (0-100%). Higher values indicate more certainty.</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>