force-app/main/default/objects/Case/fields/Classification_Method__c.field-meta.xml
<CustomField>
    <fullName>Classification_Method__c</fullName>
    <label>Classification Method</label>
    <description>Method used to determine case classification (AI-Gemini, AI-Gemini-Manual, Manual, Rule-Based)</description>
    <type>Text</type>
    <length>50</length>
</CustomField>