force-app/main/default/objects/Case/fields/Pre_Classification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pre_Classification_Complete__c</fullName>
    <label>Pre-Classification Complete</label>
    <description>Indicates that AI-powered pre-classification was completed for this case</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>