force-app/main/default/objects/Case/recordTypes/New_Service_Case.recordType-meta.xml
<RecordType>
    <fullName>New_Service_Case</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>For customer requests regarding the addition of temporary or permanent service at their location, such as delivery or installation of a compactor.</description>
    <label>New Service Case</label>
</RecordType>