force-app/main/default/objects/Case/recordTypes/Pickup_Case.recordType-meta.xml
<RecordType>
    <fullName>Pickup_Case</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>For all types of pick up cases including Empty and Return, Empty do not Return, Extra Pick Up, Bulk/Got Junk/Junk King, Bales, or an On Call Pick Up.</description>
    <label>Pickup Case</label>
</RecordType>